<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/toDoApp2"
        android:orientation="vertical"
        tools:context=".ToDoApp.ToDoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="24dp"
            android:text="@string/todo_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            style="@style/TodoSubtittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_title_categorias"
            android:textSize="25sp">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            style="@style/TodoSubtittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/todo_task"
            android:textSize="25sp">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favAddTask"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/toDoApp4"
        app:fabSize="normal"
        android:layout_gravity="end|bottom"
        app:tint="@color/white">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


</FrameLayout>